# ML-Assignments

./: CLAUDE.md  README.md  pyproject.toml  reportcode.ipynb
A3/: .gitignore  README.md  main.py  pyproject.toml  reportcode.ipynb
A3/code/: checkpoints.py  evaluate.py  features.py  models_torch.py  train.py
code/: config.py  data.py  models_scratch.py  models_torch.py  train.py  viz.py
