[project]
name = "ml-a3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pywavelets>=1.9.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "soundfile>=0.13.1",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]

[tool.pyright]                                                                                                                                           
extraPaths = ["code"]